<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/company_name"
        android:text="@string/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/company_website"
        android:text="@string/company_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"  android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/contact_email"
        android:text="@string/contact_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"  android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/version_name"
        android:text="@string/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileButton"
        android:text="Profile"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        />

</LinearLayout>
